--- a/angularDummy/demo/src/app/app.component.html
+++ b/angularDummy/demo/src/app/app.component.html
@@ -1,6 +1,18 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h1>
+        {{title}}
+      </h1>
+      <hr>
+      <app-list></app-list>
+      <hr>
+      cse
+      it 
+      ece
+      
 
-<hr>
-<app-list></app-list>
+      <app-servers></app-servers>
+    </div>
+  </div>
+</div>
