--- a/angularDummy/tour-of-heros/src/app/app.component.html
+++ b/angularDummy/tour-of-heros/src/app/app.component.html
@@ -1,5 +1,6 @@
 <h1>Hello {{title}}</h1>
-
-  <app-heros></app-heros>
-  <app-message></app-message>
-
+<nav>
+  <a routerLink="/heroes">Heroes</a>
+</nav>
+<router-outlet></router-outlet>
+<app-message></app-message>
