--- a/angularDummy/tour-of-heros/src/app/app.component.html
+++ b/angularDummy/tour-of-heros/src/app/app.component.html
@@ -1,6 +1,9 @@
 <h1>Hello {{title}}</h1>
 <nav>
+  <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
 </nav>
 <router-outlet></router-outlet>
-<app-message></app-message>
+<div>
+  <app-message></app-message>
+</div>
