--- a/angularDummy/tour-of-heros/src/app/heros/heros.component.html
+++ b/angularDummy/tour-of-heros/src/app/heros/heros.component.html
@@ -1,11 +1,14 @@
 <ul class="heroes">
-  <li *ngFor="let hero of heros"
-      (click)="onSelect(hero)"
-      [class.selected] = "hero === selectedHero ">
-      <a routerLink="/detail/{{hero.id}}">
-        <span class="badge">{{hero.id}}</span>{{hero.name}}
-      </a>
+  <li *ngFor="let hero of heros">
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span>{{hero.name}}
+    </a>
+    <button class='delete' title="delete hero" (click)="delete(hero)">X</button>
   </li>
 </ul>
-
-
+<div>
+  <label>Hero Name :
+    <input #heroName>
+  </label>
+  <button (click) = "add(heroName.value); heroName.value= ''">add</button>
+</div>
