--- a/angularDummy/tour-of-heros/src/app/hero-search/hero-search.component.html
+++ b/angularDummy/tour-of-heros/src/app/hero-search/hero-search.component.html
@@ -1,3 +1,9 @@
-<p>
-  hero-search works!
-</p>
+<div id="search-component">
+  <h4>Search Hero</h4>
+  <input #searchBox id='search-box' (keyup)="search(searchBox.value)">
+  <ul clas="search-result">
+    <li *ngFor="let hero of heroes$ | async">
+      <a routerLink="/detail/{{hero.id}}">{{hero.name}}</a>
+    </li>
+  </ul>
+</div>
