--- a/angularDummy/exercise/src/app/app.component.html
+++ b/angularDummy/exercise/src/app/app.component.html
@@ -1,5 +1,2 @@
-<div class="container body-content app-container">
-   <app-workout-runner></app-workout-runner>
-</div>
-
+<router-outlet></router-outlet>
 
