--- a/angularDummy/exercise/src/app/workout-runner/workout-runner.component.html
+++ b/angularDummy/exercise/src/app/workout-runner/workout-runner.component.html
@@ -8,7 +8,14 @@
 
   <div id="exercise-pane"
     class="col-sm-6">
-    <h1 class="text-center">{{currentExercise.exercise.title}}</h1>
+    <div id="pause-overlay"
+      (click)="pauseResumeToggle()"
+      (window:keyup)="onKeyPressed($event)">
+      <span class="pause absolute-center"
+        [ngClass]="{'ion-md-pause': !workoutPaused, 'ion-md-play': workoutPaused}"></span>
+    </div>
+    <h4 class="text-center">Workout Remaining - {{workoutTimeRemaing | secondsToPipe }}</h4>
+    <h1 class="text-center">{{currentExercise.exercise.title | uppercase}}</h1>
     <div class="image-container row">
       <img class="img-fluid col-sm"
         [src]="'/assets/images/' + currentExercise.exercise.image" />
@@ -22,9 +29,15 @@
         [ngStyle]="{'width':(exerciseRunningDuration/currentExercise.duration) * 100 + '%'}">
       </div>
     </div>
-    <h1>Time Remaining: {{currentExercise.duration-exerciseRunningDuration}}</h1>
+    <div class="row">
+      <h4 class="col-sm-6 text-left">Time Remaining: <strong>{{currentExercise.duration-exerciseRunningDuration}}</strong>
+      </h4>
+      <h4 class="col-sm-6 text-right"
+        *ngIf="currentExercise.exercise.name == 'rest'">Next up: <strong>{{workoutPlan.exercises[currentExerciseIndex+1].exercise.title}}</strong></h4>
+    </div>
+
   </div>
   <div id="video-panel"
     class="col-sm-3">
-    <app-video-player [videos]="currentExercise.exercise.videos" ></app-video-player>
+    <app-video-player [videos]="currentExercise.exercise.videos"></app-video-player>
   </div>
