--- a/angularDummy/exercise/src/app/app.component.html
+++ b/angularDummy/exercise/src/app/app.component.html
@@ -1,2 +1,6 @@
-<router-outlet></router-outlet>
-
+<div id="header">
+   <app-header></app-header>
+</div>
+<div class="container body-content app-container">
+  <router-outlet></router-outlet>
+</div>
