--- a/angularDummy/exercise/src/app/start/start.component.html
+++ b/angularDummy/exercise/src/app/start/start.component.html
@@ -8,7 +8,7 @@
       </div>
       <br />
       <div id="start" class="row">
-        <a routerLink="/workout" class="btn btn-primary btn-lg btn-block" role="button" aria-pressed="true">
+        <a [routerLink]="['/workout']" class="btn btn-primary btn-lg btn-block" role="button" aria-pressed="true">
           <span>Start</span>
           <span class="ion-md-play"></span>
         </a>
