--- a/angularDummy/exercise/src/app/workout-runner/workout-runner.component.html
+++ b/angularDummy/exercise/src/app/workout-runner/workout-runner.component.html
@@ -36,8 +36,9 @@
         *ngIf="currentExercise.exercise.name == 'rest'">Next up: <strong>{{workoutPlan.exercises[currentExerciseIndex+1].exercise.title}}</strong></h4>
     </div>
 
+    <div id="video-panel" class="col-sm-3">
+      <app-video-player [videos]="currentExercise.exercise.videos" (playbackStarted)="pause()" (playbackEnded)="resume()"></app-video-player>
+    </div>
+
   </div>
-  <div id="video-panel"
-    class="col-sm-3">
-    <app-video-player [videos]="currentExercise.exercise.videos"></app-video-player>
-  </div>
+
