angular 2 pipe implementation

--- a/angularDummy/exercise2/src/app/workout-runner/video-player/video-player.component.html
+++ b/angularDummy/exercise2/src/app/workout-runner/video-player/video-player.component.html
@@ -1,3 +1,8 @@
-<p>
-  video-player works!
-</p>
+<div class="class">
+   <h4 class="card-header">Videos</h4>
+   <div class="card-body">
+      <div *ngFor="let video of safeVideoUrls; let i = index; let f= first">
+        <iframe width="198" frameborder="0" allowfullscreen height="132" [src]="video" ></iframe>
+      </div>
+   </div>
+</div>
