--- a/angularDummy/exercise2/src/app/workout-runner/exercise-description/exercise-description.component.html
+++ b/angularDummy/exercise2/src/app/workout-runner/exercise-description/exercise-description.component.html
@@ -1,17 +1,18 @@
 <div>
   <!-- for display description-->
   <div class="card">
-     <h4 class="card-header">Description</h4>
-     <div class="card-body">
-       <div class="card-text">{{description}}</div>
-     </div>
+    <h4 class="card-header">Description</h4>
+    <div class="card-body">
+      <div class="card-text">{{description}}</div>
+    </div>
   </div>
-
+  <br />
   <!-- for display steps -->
-  <div  class="card">
+  <div class="card">
     <h4 class="card-header">Steps</h4>
     <div class="card-body">
-       <div class="card-text" [innerHTML]="steps"></div>
+      <div class="card-text"
+        [innerHTML]="steps"></div>
     </div>
   </div>
 </div>
