--- a/angularDummy/exercise2/src/app/app.component.html
+++ b/angularDummy/exercise2/src/app/app.component.html
@@ -1,4 +1,8 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <h3>Personal Trainer</h3>
+</nav>
+
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <abe-workout-runner></abe-workout-runner>
+<div class="container body-content app-container">
+  <router-outlet> </router-outlet>
 </div>
