Workout History has added in exercise

--- a/angularDummy/exercise2/src/app/app.component.html
+++ b/angularDummy/exercise2/src/app/app.component.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <h3>Personal Trainer</h3>
-</nav>
-
+<div id="header">
+  <abe-header></abe-header>
+</div>
 <!--The content below is only a placeholder and can be replaced.-->
+<!-- the below postion of page only play with Router based on url -->
 <div class="container body-content app-container">
   <router-outlet> </router-outlet>
 </div>
