--- a/angularDummy/exercise2/src/app/workout-runner/workout-runner.component.html
+++ b/angularDummy/exercise2/src/app/workout-runner/workout-runner.component.html
@@ -51,7 +51,9 @@
   <div class="col-sm-3">
     <abe-video-player [videos]="currentExercisePlan.exercise.videos"></abe-video-player>
   </div>
+  <abe-workout-audio></abe-workout-audio>
 </div>
+
 
 <div [ngSwitch]="currentExercisePlanIndex">
 
