workout builder module has added has added to exercise2

--- a/angularDummy/exercise2/src/app/start/start.component.html
+++ b/angularDummy/exercise2/src/app/start/start.component.html
@@ -11,11 +11,21 @@
     <div id="start"
       class="row">
       <a routerLink="/workout"
-        class="btn btn-primary btn-lg btn-block"
+        class="btn btn-warning btn-lg btn-block"
         role="button"
         aria-pressed="true">
         <span>Start</span>
         <span class="ion-md-play"></span>
+      </a>
+    </div>
+    <div id="builder"
+      class="row">
+      <a routerLink="/builder"
+        class="btn btn-primary btn-lg btn-block"
+        role="button"
+        aria-pressed="true">
+        <span>Create a Workout</span>
+        <span class="ion-md-add"></span>
       </a>
     </div>
   </div>
