--- a/angularDummy/exercise2/src/app/workout-builder/workout-builder.component.html
+++ b/angularDummy/exercise2/src/app/workout-builder/workout-builder.component.html
@@ -1,8 +1,10 @@
-<div class="row">
-  <div class="col-sm-3"> </div>
-  <div class="col-sm-6">
-      <h3 class="text-center">Workout Builder</h3>
-  </div>
-  <div class="col-sm-3"> </div>
+<div class="container-fluid fixed-top mt-5">
+  <div class="row mt-5">
 
+  </div>
+  <div class="row mt-2">
+    <div class="col-sm-12">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
