--- a/angularDummy/exercise2/src/app/workout-builder/exercises/exercises.component.html
+++ b/angularDummy/exercise2/src/app/workout-builder/exercises/exercises.component.html
@@ -1,3 +1,8 @@
-<p>
-  exercises works!
-</p>
+<div class="row">
+    <div>
+       <abe-left-nav-exercises></abe-left-nav-exercises>
+    </div>
+    <div class="col-sm-10 builder-content">
+       <h1 class="text-center">Exercises</h1>
+    </div>
+  </div>
