--- a/angularDummy/exercise2/src/app/workout-builder/workout/workout.component.html
+++ b/angularDummy/exercise2/src/app/workout-builder/workout/workout.component.html
@@ -1,3 +1,148 @@
-<p>
-  workout works!
-</p>
+<div class="row">
+  <div>
+    <abe-left-nav-exercises></abe-left-nav-exercises>
+  </div>
+  <div class="col-sm-10 builder-content">
+    <div id="workout-container"
+      class="workout-container">
+      <div class="row">
+        <h2 class="col-sm-9">{{workout.title || 'Workout Title'}}</h2>
+      </div>
+      <form #f="ngForm"
+        name="formWorkout"
+        (ngSubmit)="save(f.form)"
+        class="row">
+        <div id="exercise-list"
+          class="col-sm-2 exercise-list"
+          ngModelGroup="exercises">
+          <div *ngFor="let exercisePlan of workout.exercises; let i =  index"
+            class="exercise-item">
+            <div class="exercise tile"
+              [ngModelGroup]="i">
+              <div class="title">
+                {{exercisePlan.exercise.title}}
+                <span class="btn float-right trashcan"
+                  (click)="removeExercise(exercisePlan)">
+                  <span class="ion-ios-trash-outline"></span>
+                </span>
+              </div>
+              <div class="index">
+                <span>{{i+1}}</span>
+              </div>
+              <div class="main">
+                <div class="image">
+                  <img [src]="exercisePlan.exercise.image? '/assets/images/'+exercisePlan.exercise.image : '/static/images/'+'running.png'">
+                </div>
+                <div class="details">
+                  <select class="select-duration form-control"
+                    name="duration"
+                    [(ngModel)]="exercisePlan.duration1">
+                    <option *ngFor="let duration of durations"
+                      [value]="duration.value">{{duration.title}}</option>
+                  </select>
+                </div>
+              </div>
+              <div class="order">
+                <button type="button"
+                  class="btn btn-info tile-outside-button"
+                  (click)="moveExerciseTo(exercisePlan,0)"> <span class="ion-ios-arrow-dropup-outline"></span></button>
+                <button type="button"
+                  class="btn btn-info tile-inside-button"
+                  (click)="moveExerciseTo(exercisePlan,i-1)"><span class="ion-ios-arrow-up"></span></button>
+                <button type="button"
+                  class="btn btn-info tile-inside-button"
+                  (click)="moveExerciseTo(exercisePlan,i+1)"><span class="ion-ios-arrow-down"></span></button>
+                <button type="button"
+                  class="btn btn-info tile-outside-button"
+                  (click)="moveExerciseTo(exercisePlan, workout.exercises.length-1)"><span class="ion-ios-arrow-dropdown-outline"></span></button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="workout-data"
+          class="col-sm-3 workout-data">
+          <div class="form-group row">
+            <label for="workout-name">Name:</label>
+            <input type="text"
+              name="workoutname"
+              #spy
+              #nameField="ngModel"
+              required
+              class="form-control"
+              id="workout-name"
+              placeholder="Enter wrokout name. Must be unique."
+              [(ngModel)]="workout.name">
+            <label>{{spy.className}}</label>
+            <label *ngIf="nameField.control.hasError('required') && (nameField.touched)"
+              class="alert alert-danger validation-message">Name is required</label>
+          </div>
+          <div class="form-group row">
+            <label for="workout-title">Title:</label>
+            <input type="text"
+              name="title"
+              class="form-control"
+              id="workout-title"
+              placeholder="What could be the workout title?"
+              #titleField="ngModel"
+              required
+              minlength="5"
+              maxlength="20"
+              [(ngModel)]="workout.title">
+            <label *ngIf="(titleField.control.hasError('minlength') || titleField.control.hasError('maxlength') ) && workout.title.length > 0"
+              class="alert alert-danger validation-message">Title length should be between 5 and 20 char length</label>
+
+          </div>
+          <div class="form-group row">
+            <label for="workout-description">Description:</label>
+            <textarea name="description"
+              class="form-control"
+              id="workout-description"
+              placeholder="Enter workout description"
+              #descriptionField="ngModel"
+              required
+              [(ngModel)]="workout.description"></textarea>
+          </div>
+          <div class="form-group row">
+            <label for="workout-rest">Rest Time (in second)</label>
+            <input type="number"
+              name="restBetweenExercise"
+              class="form-control"
+              id="workout-rest"
+              placeholder="Rest Period between exercise in seconds"
+              #restField="ngModel"
+              required
+              [(ngModel)]="workout.restBetween">
+          </div>
+          <div class="form-group row">
+            <label>Total Exercise:</label>
+            <p class="badge badge-pill badge-primary">{{workout.exercises?.length}}</p>
+          </div>
+          <div class="form-group row">
+            <label>Total Duration:</label>
+            <p class="badge badge-pill badge-primary"
+              *ngIf="workout.exercises.length > 0">{{workout.totalWorkoutDuration() | numberToSeconds}}</p>
+          </div>
+          <div class="row">
+            <button type="submit"
+              class="btn btn-warning">Save</button>
+          </div>
+
+          <div class="form-group row">
+              <input type="hidden"
+              name="exerciseCount"
+              #exercisecountField="ngModel"
+              ngControl="exerciseCount"
+              class="form-control"
+              id="exercise-count"
+              [(ngModel)]="workout.exercises.length" pattern="[1-9][0-9]*">
+              <label *ngIf="exercisecountField.control.hasError('pattern') && (removeTouched)" class="alert alert-danger extened-validation-message">
+                 The exercise count in workout at least greater than 1
+              </label>
+          </div>
+        </div>
+
+
+      </form>
+    </div>
+  </div>
+</div>
