--- a/angularDummy/exercise2/src/app/workout-builder/workout/workout.component.html
+++ b/angularDummy/exercise2/src/app/workout-builder/workout/workout.component.html
@@ -73,7 +73,7 @@
               placeholder="Enter wrokout name. Must be unique."
               [(ngModel)]="workout.name">
             <label>{{spy.className}}</label>
-            <label *ngIf="nameField.control.hasError('required') && (nameField.touched)"
+            <label *ngIf="nameField.control.hasError('required') && (nameField.touched || submitted)"
               class="alert alert-danger validation-message">Name is required</label>
           </div>
           <div class="form-group row">
@@ -98,9 +98,8 @@
               class="form-control"
               id="workout-description"
               placeholder="Enter workout description"
-              #descriptionField="ngModel"
-              required
               [(ngModel)]="workout.description"></textarea>
+
           </div>
           <div class="form-group row">
             <label for="workout-rest">Rest Time (in second)</label>
@@ -127,6 +126,7 @@
               class="btn btn-warning">Save</button>
           </div>
 
+
           <div class="form-group row">
               <input type="hidden"
               name="exerciseCount"
@@ -135,10 +135,12 @@
               class="form-control"
               id="exercise-count"
               [(ngModel)]="workout.exercises.length" pattern="[1-9][0-9]*">
-              <label *ngIf="exercisecountField.control.hasError('pattern') && (removeTouched)" class="alert alert-danger extened-validation-message">
+              <label *ngIf="exercisecountField.control.hasError('pattern') && (removeTouched || submitted)"
+              class="alert alert-danger extened-validation-message">
                  The exercise count in workout at least greater than 1
               </label>
           </div>
+
         </div>
 
 
