--- a/angularDummy/exercise2/src/app/workout-builder/navigation/left-nav-exercises.component.html
+++ b/angularDummy/exercise2/src/app/workout-builder/navigation/left-nav-exercises.component.html
@@ -1,6 +1,6 @@
 <div class="left-nav-exercises-bar">
   <h3>Exercises</h3>
-  <div *ngFor="let exercise of exerciseList|orederBy:'title'">
+  <div *ngFor="let exercise of exerciseList|async|orederBy:'title'">
      <button class="btn col-sm-10" (click)="addExercise(exercise)">{{exercise.title}}
        <span class="ion-ios-arrow-forward"></span>
      </button>
