--- a/angularDummy/exercise2/src/app/workout-builder/workout/workout.component.html
+++ b/angularDummy/exercise2/src/app/workout-builder/workout/workout.component.html
@@ -3,8 +3,12 @@
     <abe-left-nav-exercises></abe-left-nav-exercises>
   </div>
   <div class="col-sm-10 builder-content">
+
     <div id="workout-container"
       class="workout-container">
+
+      <div *ngIf="notFound" class="not-found-msgbox">Could not load the specific workout! </div>
+
       <div class="row">
         <h2 class="col-sm-9">{{workout.title || 'Workout Title'}}</h2>
       </div>
@@ -90,7 +94,6 @@
               [(ngModel)]="workout.title">
             <label *ngIf="(titleField.control.hasError('minlength') || titleField.control.hasError('maxlength') ) && workout.title.length > 0"
               class="alert alert-danger validation-message">Title length should be between 5 and 20 char length</label>
-
           </div>
           <div class="form-group row">
             <label for="workout-description">Description:</label>
