--- a/reactjsDummy/load-generator/src/App.css
+++ b/reactjsDummy/load-generator/src/App.css
@@ -2,6 +2,61 @@
   text-align: center;
 }
 
+#myPocContainer{
+
+  border-style: solid;
+  border-width: 4px;
+  border-color: rgb(213, 78, 231);
+}
+
+#resultRenderDiv{
+  margin:5px; 
+                padding:5px; 
+                width: 100%; 
+                height: 400px; 
+                overflow: auto; 
+                text-align:justify; 
+}
+
+#myHorizontalSeprator{
+
+  background-color: rgb(213, 78, 231);
+  color:white
+}
+
+ #myUsecases{
+
+  background-color: rgb(213, 78, 231);
+}
+
+.useCaseContainer{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: right;
+}
+
+span{
+  color:green;
+  font-family: monospace;
+  white-space: pre;
+  font-family:cursive;
+  font-style:italic;
+  font-size: 16px
+}
+
+ #useCaseButton{
+
+  background-color: rgb(213, 78, 231);
+  color:white;
+  font-size: 26px;
+  min-height: 113px;
+  }
+
+h2{
+  color:white
+}
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
